--- a/app/src/main/res/drawable/switch_tumbs.xml
+++ b/app/src/main/res/drawable/switch_tumbs.xml
@@ -5,6 +5,6 @@
     <solid android:color="#00FFFFFF"/>
     <corners android:topRightRadius="5dp"
         android:topLeftRadius="5dp"/>
-    <stroke android:width="1dp" android:color="@android:color/darker_gray"/>
+    <stroke android:width="1dp" android:color="#eeeeee"/>
 
 </shape>
