--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -173,7 +173,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="4dp"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:hint="Calle Principal"
                             app:boxStrokeColor="#4E4A4A"
                             app:boxStrokeWidth="1dp"
@@ -200,7 +200,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="8dp"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:hint="Calle Secundaria"
                             app:boxStrokeColor="#4E4A4A"
                             app:boxStrokeWidth="1dp"
@@ -227,7 +227,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="8dp"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:hint="Referencia"
                             app:boxStrokeColor="#4E4A4A"
                             app:boxStrokeWidth="1dp"
@@ -254,7 +254,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="8dp"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:hint="Número de Casa"
 
                             app:boxStrokeColor="#4E4A4A"
@@ -282,7 +282,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="8dp"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:hint="Nombre de la Dirección"
                             app:boxStrokeColor="#4E4A4A"
                             app:boxStrokeWidth="1dp"
@@ -313,7 +313,7 @@
                             android:layout_marginBottom="8dp"
                             android:elevation="15dp"
                             android:gravity="center"
-                            android:text="Siguiente"
+                            android:text="Guardar"
                             android:textAllCaps="false"
                             android:textColor="@color/textColor"
                             android:textSize="17sp"
