--- a/app/src/main/res/layout/item_direcciones.xml
+++ b/app/src/main/res/layout/item_direcciones.xml
@@ -23,10 +23,52 @@
         >
 
 
+        <LinearLayout
+            android:id="@+id/linear_menu"
+            android:layout_width="55dp"
+            android:layout_height="35dp"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.72"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.68">
+
+            <ImageButton
+                android:id="@+id/botton_editar_ubi"
+                android:layout_width="25dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="2dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/editar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.863" />
+
+            <ImageButton
+                android:id="@+id/botton_borrar_menu"
+                android:layout_width="25dp"
+                android:layout_height="35dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/borrar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.863" />
+
+        </LinearLayout>
+
         <ImageView
             android:id="@+id/imagen_direccion"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="10dp"
             android:scaleType="centerInside"
@@ -44,29 +86,56 @@
             android:maxLines="1"
             android:text="Combo de Limpieza"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.35"
+            app:layout_constraintHorizontal_bias="0.29"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.18" />
+            app:layout_constraintVertical_bias="0.192" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="290dp"
+            android:layout_width="210dp"
             android:layout_height="32dp"
             android:lines="2"
             android:minLines="2"
             android:text="TextViewjsjsjsjsjjsjjsjssjjsjsjsjhdbhdbdhbdhbddhbdhdbhdbhbdhdbhdbdhbdjdnjdndj"
-            android:textSize="12sp"
+            android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.68"
+            app:layout_constraintHorizontal_bias="0.305"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
+
+        <ImageButton
+            android:id="@+id/menu_ubi"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.83"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.863" />
+
+        <TextView
+            android:id="@+id/txt_contador"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:visibility="invisible"
+            tools:layout_editor_absoluteX="9dp"
+            tools:layout_editor_absoluteY="3dp" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
