--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -4,29 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="390dp"
-    android:layout_height="160dp"
+    android:layout_height="138dp"
     android:layout_marginStart="4dp"
     android:layout_marginTop="2dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginBottom="4dp"
     app:cardCornerRadius="18dp"
     app:cardElevation="2dp"
+    android:paddingRight="2dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="390dp"
-        android:layout_height="150dp"
+        android:layout_height="128dp"
         android:background="#00F6FBF7"
         android:paddingStart="14dp"
         android:paddingEnd="4dp"
-        android:paddingBottom="20dp"
+        android:paddingBottom="15dp"
 
         >
 
 
         <ImageView
             android:id="@+id/imagen_producto"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/precio_producto"
@@ -48,10 +49,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.726"
+            app:layout_constraintHorizontal_bias="0.58"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.192" />
+            app:layout_constraintVertical_bias="0.145" />
 
         <TextView
             android:id="@+id/precio_producto"
@@ -66,7 +67,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.394"
+            app:layout_constraintHorizontal_bias="0.32"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.877" />
@@ -88,22 +89,21 @@
 
         <TextView
             android:id="@+id/descripcion_producto"
-            android:layout_width="180dp"
+            android:layout_width="220dp"
             android:layout_height="40dp"
 
-            android:maxLines="1"
-            android:text="Combo de Limpieza"
             android:lines="2"
+            android:maxLines="1"
             android:minLines="2"
             android:singleLine="false"
+            android:text="Combo de Limpieza"
             android:textSize="12sp"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.638"
+            app:layout_constraintHorizontal_bias="0.68"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.518" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
