--- a/app/src/main/res/layout/layout_botton_sheet.xml
+++ b/app/src/main/res/layout/layout_botton_sheet.xml
@@ -26,6 +26,7 @@ android:layout_marginLeft="155dp"
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/txt_nombre_usu_ubi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -56,12 +57,9 @@ android:textColor="@color/black"
         android:layout_height="50dp"
         android:background="@color/white"
         android:drawableStart="@drawable/anadir"
-        android:drawablePadding="8dp"
-
-        android:padding="8dp"
-        android:paddingEnd="16dp"
+android:paddingTop="15dp"
         android:text="Añadir nueva dirección"
-        android:textAllCaps="false"
+
         android:textColor="@color/pinkColor"
         android:textSize="15sp"
         android:layout_marginBottom="5dp"
