--- a/app/src/main/res/drawable/txt_promo.xml
+++ b/app/src/main/res/drawable/txt_promo.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <rotate
-            android:fromDegrees="12"
+            android:fromDegrees="10"
             android:toDegrees="100"
             android:pivotX="50%"
             android:pivotY="50%" >
@@ -10,7 +10,7 @@
                 android:shape="line" >
                 <stroke
                     android:width="1.5dip"
-                    android:color="@color/black" />
+                    android:color="@color/textColorSecondary" />
             </shape>
         </rotate>
     </item>
