--- a/app/src/main/res/layout/menu_promo.xml
+++ b/app/src/main/res/layout/menu_promo.xml
@@ -3,43 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
-    android:layout_width="400dp"
-    android:layout_height="200dp"
+    android:layout_width="340dp"
+    android:layout_height="250dp"
     android:layout_marginStart="4dp"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="1dp"
     app:cardCornerRadius="18dp"
     app:cardElevation="2dp"
+
+    android:paddingBottom="10dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:background="@drawable/fondo_promo"
+
+        android:layout_width="340dp"
+        android:layout_height="250dp"
         android:paddingStart="14dp"
         android:paddingEnd="4dp"
-        android:paddingBottom="20dp"
-
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         >
 
 
         <ImageView
             android:id="@+id/imagen_promo"
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:scaleType="centerInside"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.117"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.695"
+            app:layout_constraintVertical_bias="0.228"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/txt_nombre"
+            android:id="@+id/txt_nombre_promo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
+
             android:maxLines="1"
             android:text="Combo de Limpieza"
             android:textColor="@color/black"
@@ -57,10 +60,10 @@
             android:id="@+id/txt_precio_promo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="8dp"
-            android:ellipsize="end"
+
+
             android:foreground="@drawable/txt_promo"
-            android:gravity="center_vertical"
+
             android:maxLines="1"
             android:text="$ 7.98"
             android:textColor="@color/textColorSecondary"
@@ -73,12 +76,10 @@
             app:layout_constraintVertical_bias="0.564" />
 
         <TextView
-            android:id="@+id/txt_descripcion_promo"
+            android:id="@+id/txt_precio_actual_promo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="8dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
+
             android:maxLines="1"
             android:text="$ 5.98"
             android:textColor="@color/black"
@@ -94,16 +95,15 @@
             android:id="@+id/botton_promo"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+
             android:background="@android:color/transparent"
             android:src="@drawable/ic_button_plus"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.907"
+            app:layout_constraintHorizontal_bias="0.882"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.968" />
+            app:layout_constraintVertical_bias="0.833" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
