--- a/app/src/main/res/layout/menu_promo.xml
+++ b/app/src/main/res/layout/menu_promo.xml
@@ -28,8 +28,8 @@
 
         <ImageView
             android:id="@+id/imagen_promo"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="170dp"
+            android:layout_height="190dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -37,6 +37,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.228"
             tools:srcCompat="@tools:sample/avatars" />
+
 
         <TextView
             android:id="@+id/txt_nombre_promo"
@@ -50,11 +51,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.891"
+            app:layout_constraintHorizontal_bias="0.858"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.258" />
-
+            app:layout_constraintVertical_bias="0.083" />
 
         <TextView
             android:id="@+id/txt_precio_promo"
@@ -104,6 +104,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.833" />
+
+        <TextView
+            android:id="@+id/txt_descripcion_promo"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.652"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.402" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
