--- a/app/src/main/res/layout/fragment_descripcion.xml
+++ b/app/src/main/res/layout/fragment_descripcion.xml
@@ -191,6 +191,7 @@
             android:ellipsize="end"
             android:text="descripcion"
             android:gravity="center"
+            android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
